@@ -17,6 +17,8 @@ devscripts (2.10.19) UNRELEASED; urgency=low
     + Modify each of the simple shell variable tests (e.g. $RANDOM) to
       also match ${variable}
   * bts: Allow the sendmail command to begin with a ~ (Closes: #469207)
+  * debcommit: Don't attempt to call svk diff with options, as it doesn't
+    support them (Closes: #469238)
 
  -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 01 Mar 2008 11:42:02 +0000
 
